# SensorMonitor

./: TODO.md
arduino/: sketch_temp.ino
arduino/sketch_temp/: sketch_temp.ino
cmake/: UseODB.cmake
dbmodel/: CMakeLists.txt
dbmodel/include/: Deployment.hpp  Measurement.hpp  SensorInterpretation.hpp  SensorNode.hpp  Storage.hpp
dbmodel/src/: Deployment.cpp  Storage.cpp  main.cpp
server/: CMakeLists.txt
server/src/: CRC.hpp  main.cpp
